--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
     <style type="text/css">
       body { background-color: #3c4452 !important; }
-      #loading-indicator { width:100%; height:100%; color:#07a2cc; font-size:1.6em; text-align:center; margin-top: 20%; }
+      #loading-indicator { width:100%; height:100%; color:#E5063E; font-size:1.6em; text-align:center; margin-top: 20%; }
     </style>
   </head>
   <body>
